app/assets/stylesheets/events.css
div.event_view {
  margin-bottom:20px;
}

span.event_time {
  top:0;
  right:0;
  position:absolute;
  color:#888;
}

div.event_view h1 a {
  color:#000;
}

div.admin_tools {
  margin-top:10px;
}

div.field, div.field input, div.field textarea {
  width:100%;
}

div#day_time_field, div#date_field {
  width:49%;
  margin:inherit 0;
}

div#day_time_field {
  right:0;
  top:0;
  position:absolute;
}

#ui-datepicker-div {
  background-color:#FFF;
  border-radius:5px;
  padding:15px;
  -moz-box-shadow:    0px 20px 20px 3px #555;
  -webkit-box-shadow: 0px 20px 20px 3px #555;
  box-shadow:         0px 20px 20px 3px #555;
}

a.ui-datepicker-next {
  float:right;
}

div.ui-datepicker-title {
  width:100px;
  margin-left:auto;
  margin-right:auto;
}

span.ui-datepicker-month, span.ui-datepicker-year {
  font-style:italic;
}

table.ui-datepicker-calendar {
  margin-top:15px;
  text-align:center;
}

table.ui-datepicker-calendar tbody tr td {
  padding:5px;
}

td.ui-state-disabled {
  color:#CCC;
  font-weight:normal;
  text-align:center;
}

